# vascular-education-bot

backend/: .env  README.md  pyproject.toml
backend/src/agents/: supervisor.py
backend/src/agents/grader/: agent.py
backend/src/agents/researcher/: agent.py
backend/src/agents/teacher/: agent.py
backend/src/agents/tools/: evaluator.py  kg.py  questionmaker.py  rag.py
db/data/textbooks/: 402767177-Researching-patient-safety-and-quality-in-healthcare-a-Nordic-perspective-Aase-Karina-Schibevaag-Lene-pdf.txt  701219614-4-1644829864-Oral-and-Maxillofacial-Surgery-2020.txt  720294677-The-SAGES-Manual-of-Quality-Outcomes-and-Patient-Safety-John-R-Romanelli-Editor-Jonathan-M-Dort-Editor-2nd-Ed-2022-2022-Springer.txt  819959089-Ebook-The-ASCRS-Textbook-of-Colon-and-Rectal-Surgery-4th-Edition-by-Scott-R-Steele-Tracy-L-Hull-Neil-Hyman-Justin-A-Maykel-Thomas-E-Read-C.txt  823101719-Ebook-Current-Therapy-of-Trauma-and-Surgical-Critical-Care-by-Juan-A-Asensio-Donald-D-Trunkey-ISBN-0323044182-2024-scribd-download.txt
db/preprocessing/: jvs.sh  pubmed.sh
frontend/: README.md  package-lock.json  package.json
frontend/src/lib/: Ask.svelte  Learn.svelte
frontend/src/routes/: +page.svelte
