[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-graph-retriever>=0.8.0",
    "langgraph>=0.4.10",
    "langgraph-supervisor>=0.0.27",
    "langmem>=0.0.27",
    "openevals>=0.1.0",
]
