[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "chromadb>=1.0.13",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.14",
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-graph-retriever>=0.8.0",
    "langchain-openai>=0.3.26",
    "langgraph>=0.4.10",
    "langgraph-checkpoint-aws>=0.1.0",
    "langgraph-supervisor>=0.0.27",
    "langmem>=0.0.27",
    "langsmith>=0.4.2",
    "openai>=1.92.2",
    "openevals>=0.1.0",
    "pydantic>=2.11.7",
    "starlette>=0.46.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.3",
]
